--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.2.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -20,8 +21,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-cookie": "^1.2.6",
+    "angular2-font-awesome": "^1.3.0",
+    "bulma": "^0.4.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "primeng": "^4.1.0-rc.2",
     "rxjs": "^5.1.0",
+    "sweetalert2": "^6.6.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
